# custodex

./: .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  alembic.ini  cdmon.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-pages.yml
.project/: COMPETITORS.md  INDEX.md  LESSON_LEARNT.md  PROCESS.md  ROADMAP.md  STATUS.md
.project/problems/: A-02.md  A-07.md  B-02-HANDOFF.md
.project/slices/: A-01.md  A-02.md  A-03.md  A-04.md  A-05.md  A-07.md  AGT-01.md  AGT-02.md  ASTRO-01.md  ASTRO-02.md  ASTRO-03.md  ASTRO-04.md  B-01.md  B-02.md  B-03.md  B-04.md  B-06.md  C-01.md  C-03.md  C-04.md  D-01.md  D-03.md  D-05.md  E-01.md  E-02.md  E-03.md  E-04.md  E-05.md  F-01.md  F-02.md  F-04.md  G-01.md  G-03.md  GIT-00.md  H-01.md  H-02.md  H-03.md  L-01.md  M-01.md  M-02.md  (+46 more)
.project/spec/: ARCHITECTURE.md  CONFIGV2.md  CONSTRAINTS.md  EDITOR.md  SPEC.md  VISION.md
.project/tickets/: TICKETS.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_repo_token_hash.py  0003_config_sync_tables.py  0004_config_edits_table.py  0005_repo_provider_secret.py  0006_roster_and_ownership.py  0007_doc_edges_table.py  0008_graph_snapshots.py
code_doc_monitor/: __init__.py  backends.py  blocks.py  build.py  cli.py  config.py  configsync.py  coverage.py  docstyle.py  doctor.py  drift.py  errors.py  extract.py  featurecatalog.py  generate.py  gitauth.py  gitfetch.py  heal.py  index.py  issues.py  layout.py  manifest.py  monitor.py  ownership.py  pr.py  registry.py  report.py  reviewlog.py  schema.py  secrets.py  settings.py  sinks.py  srcindex.py  staleness.py  syncpr.py  testwiki.py  traceability.py  wiki.py
code_doc_monitor/agent/: __init__.py  backend.py  graph.py  prompts.py  runtime.py
code_doc_monitor/server/: app.py  db.py  edits.py  standalone.py  store.py
config/: settings.yaml
config/cdmon/: agent.yaml  core.yaml  coverage.rpt  doc-style.yaml  index.yaml  server.yaml  tests.yaml
custodex/: __init__.py  _v2base.py  backends.py  blocks.py  build.py  cli.py  config.py  configsync.py  coverage.py  docdeps.py  docmap.py  docstyle.py  doctor.py  drift.py  entities.py  errors.py  extract.py  featurecatalog.py  generate.py  gitauth.py  gitfetch.py  heal.py  inventory.py  issues.py  kgraph.py  layout.py  manifest.py  monitor.py  ownership.py  pr.py  promotion.py  registry.py  report.py  reviewlog.py  schema.py  secrets.py  settings.py  similar.py  sinks.py  srcindex.py  (+7 more)
custodex/agent/: __init__.py  backend.py  graph.py  prompts.py  runtime.py  state.py
custodex/server/: __init__.py  app.py  db.py  edits.py  standalone.py  store.py
dashboard/: .env.production  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.routing.test.tsx  App.tsx  index.css  main.tsx  types.ts
demo/: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEMOS.md  LICENSE  README.md  pyproject.toml  walkthrough.py
demo/.github/workflows/: ci.yml
demo/config/cdmon/: core.yaml  coverage.rpt  index.yaml  tests.yaml
demo/docs/api/: core-api.md  io-api.md
demo/docs/guide/: getting-started.md
demo/src/taskflow/: __init__.py
demo/templates/writing/vocabulary/: engine-domain.md
demo/test-docs/: test_engine.md  test_io.md  test_model.md  test_scheduler.md
demo/tests/: __init__.py  test_engine.py  test_io.py  test_model.py  test_scheduler.py
docs/: LAYOUT_STANDARD.md  REVIEW_RECORD_SCHEMA.json
docs/api/: central-client.md  coverage-system.md  foundation.md  index.md  layout-build.md  learning.md  ops.md  pipeline.md  pr-loop.md  remediation.md  server.md
examples/: genbuild_gen.py
examples/external-repo/: README.md  cdmon.yaml
examples/multilang/: README.md  cdmon.yaml
feature-doc/: FEATURES.md  README.md
feature-doc/catalog/: agent.yaml  backends.yaml  cli.yaml  config.yaml  configv2.yaml  coverage.yaml  docdeps.yaml  docmap.yaml  drift.yaml  entities.yaml  extract.yaml  gitsync.yaml  heal.yaml  kgraph.yaml  layout.yaml  learn.yaml  manifest.yaml  monitor.yaml  ownership.yaml  pr.yaml  quality.yaml  record.yaml  reference.yaml  server.yaml  settings.yaml  staleness.yaml  worklist.yaml
feature-doc/wiki/: SOURCE_WIKI.md  TEST_WIKI.md  TRACEABILITY.md
frontend/: astro.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/public/: CNAME
frontend/src/: content.config.ts  env.d.ts
scripts/: demo_as_git.py  seed_demo.py
templates/ci/: README.md  github-actions.adopter.yml  gitlab-ci.adopter.yml
test-docs/smoke/: test_boundaries.md  test_smoke.md
tests/: _gitrepo.py  _repo.py  conftest.py  test_agent.py  test_agent_style.py  test_apply_fix.py  test_backends.py  test_build.py  test_ci_templates.py  test_cli.py  test_cli_init.py  test_cli_sync.py  test_config.py  test_config_edits.py  test_config_edits_routes.py  test_config_ignore.py  test_config_index.py  test_config_v2.py  test_configsync.py  test_context_refs.py  test_coverage.py  test_db.py  test_dirlayout_e2e.py  test_docstyle.py  test_doctor.py  test_dogfood.py  test_drift.py  test_editable_tree.py  test_example_external.py  test_example_multilang.py  test_extract.py  test_generate.py  test_heal.py  test_index.py  test_inventory.py  test_issues.py  test_layout.py  test_live_llm.py  test_manifest.py  test_monitor.py  (+14 more)
tests/integration/: test_agent_style.py  test_apply_fix.py  test_build.py  test_config.py  test_config_edits_routes.py  test_config_ignore.py  test_config_index.py  test_config_v2.py  test_configsync.py  test_db.py  test_demo_traceability.py  test_docdeps_server.py  test_doctor.py  test_editable_tree.py  test_entities_dogfood.py  test_generate.py  test_gitfetch.py  test_heal.py  test_layout.py  test_monitor.py  test_monitor_docdeps.py  test_ownership_server.py  test_provider_secret.py  test_report.py  test_server.py  test_server_gitsync.py  test_server_settings.py  test_server_store_parity.py  test_server_sync.py  test_staleness_server.py  test_store_config.py  test_syncpr.py  test_templates_v2.py  test_worklist_server.py
tests/unit/: test_pr.py  (+42 more)
(+134 files in other folders)
