[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "custodex"
version = "0.1.0"
description = "Custodex — keeps your code and docs in sync, owned, and accountable: detect drift (code↔doc and doc↔doc), fix or invalidate it with an LLM, peg an owner to every doc, track review SLAs, and log every verdict for human review."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "typer",
    "pyyaml",
]

[project.optional-dependencies]
# The LangGraph remediation agent (backend.kind: agent). Optional so the core
# engine's default `mock` path keeps a minimal dependency surface (K0).
agent = [
    "langgraph>=1,<2",
]
# The central FastAPI server (custodex.server). Optional so the core
# engine + CLIENT side (sinks/registry) keep a minimal dependency surface (K0);
# the server subpackage imports fastapi only when used (lazy, like `agent`).
# httpx is the FastAPI TestClient transport.
server = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "httpx",
    # E-04: the central server's persistence layer (SQLAlchemy 2.0, Postgres-first)
    # + migrations. The default offline suite runs on stdlib SQLite (no driver);
    # `psycopg[binary]` is the Postgres driver, needed ONLY for the real-PG `pg`
    # path (the `tests:pg` CI job), never for the offline SQLite suite (K4).
    "sqlalchemy>=2.0",
    "alembic",
    "psycopg[binary]",
    # GIT-01: seal per-repo provider credentials at rest (AES-256-GCM). A git
    # credential must be REPLAYED (not hashed), so it is encrypted, not one-way —
    # the conscious fork from the E-06 token-hash model. The engine core NEVER
    # imports `cryptography` (secrets.py lazy-imports it, and only app.py/tests
    # import secrets.py), so the core dependency surface is unchanged (K0).
    "cryptography>=42",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-PyYAML",
    "langgraph>=1,<2",
    "fastapi>=0.115",
    "uvicorn[standard]",
    "httpx",
    "sqlalchemy>=2.0",
    "alembic",
    "psycopg[binary]",
    "cryptography>=42",
]

[project.scripts]
cdx = "custodex.cli:app"
# The central server launcher (needs the [server] extra). Equivalent to
# `uvicorn custodex.server.app:create_app --factory`.
cdx-server = "custodex.server.app:main"
# Deprecated aliases — `cdmon`/`cdmon-server` were the pre-rebrand names (the tool
# is now Custodex/`cdx`). Kept as working aliases so existing scripts, CI, and
# muscle memory don't break; they point at the same entrypoints.
cdmon = "custodex.cli:app"
cdmon-server = "custodex.server.app:main"

[tool.setuptools.packages.find]
include = ["custodex*"]
exclude = ["tests*"]

# Ship the agent's Markdown artifacts (AGENT/PROTOCOL/TOOL/PERSONA) with the wheel.
[tool.setuptools.package-data]
"custodex.agent" = ["prompts/*.md"]

# ----------------------------------------------------------------------------
# Ruff — lint + format
# ----------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Typer's option/argument defaults are calls by design (B008).
"custodex/cli.py" = ["B008"]
# FastAPI's `Depends(...)` in route-handler defaults is the idiomatic DI pattern
# (B008), exactly like typer's option defaults above.
"custodex/server/app.py" = ["B008"]

# ----------------------------------------------------------------------------
# mypy — strict-ish
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
exclude = ["\\.venv"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# uvicorn ships no type stubs and is only referenced in the server-launch leaf
# (server/app.py:main, a `# pragma: no cover` runner). Don't fail mypy on its
# missing stub — it's part of the [server] extra, not the type-checked surface.
[[tool.mypy.overrides]]
module = "uvicorn"
ignore_missing_imports = true

# ----------------------------------------------------------------------------
# pytest + coverage
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
# The default suite is offline (K4): the real-LLM tests are excluded unless a
# job opts in with `-m live_llm` (see .gitlab-ci.yml's `tests:live-llm` job). The
# `pg` tests (E-04) run the DB contract against real Postgres; they are excluded
# too and opt-in via `-m pg` in the `tests:pg` job — the offline suite runs the
# same contract on stdlib SQLite, so nothing here connects to a database (K4).
addopts = '-q -m "not live_llm and not pg"'
testpaths = ["tests"]
markers = [
    "live_llm: spawns a real LLM backend (resolved from the config file); opt-in, excluded by default.",
    "pg: runs the DB store contract against a real Postgres ($CDMON_DATABASE_URL); opt-in, excluded by default (the offline suite uses SQLite).",
    "regression: H-03 curated regression corpus — one durable invariant per learned failure mode (tests/regression/). INCLUDED in the default suite (it lives under tests/) AND selectable alone via `pytest -m regression`.",
    "unit: pure single-module unit test — one module's logic, no cross-module orchestration/CLI/server (EPIC R taxonomy, tests/unit/). Auto-applied by path.",
    "integration: module-to-module seam or cross-module config loading, no full CLI (EPIC R taxonomy, tests/integration/). Auto-applied by path.",
    "system: drives the CLI or server end-to-end on a real fixture/demo/example (EPIC R taxonomy, tests/system/). Auto-applied by path.",
    "smoke: trivial import/availability/wiring check (EPIC R taxonomy, tests/smoke/). Auto-applied by path.",
]
filterwarnings = [
    # Starlette's TestClient (the [server] extra, E-03) emits a targeted
    # StarletteDeprecationWarning about `httpx`/`httpx2`. Ignore ONLY that one so
    # a future `-W error` run on the server tests stays green — warnings are NOT
    # globally silenced.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:Warning",
]

[tool.coverage.run]
# Measure BRANCH coverage, not just line coverage. Line coverage hides untested
# branches (an `if` whose else-arm never runs still shows the `if` line as
# covered); branch coverage surfaces them, so partially-exercised conditionals
# fail the gate instead of passing silently. The two Store implementations are
# tested at parity through HTTP (tests/test_server_store_parity.py), so the
# branch gate guards real cross-backend behavior, not just touched lines.
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
